--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,61 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+	--green: #2d4a22;
+	--red: #e52e4d;
+	--blue: #5429cc;
+	--blue-light: #49aa26;
+	--text-title: #363f5f;
+	--text-body: #969cb3;
+	--input-background: #e7e9ee;
+	--input-border: #d7d7d7;
+	--background: #f0f2f5;
+	--shape: #ffffff;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	width: 100%;
+	height: 100%;
+}
+@media (max-width: 1080px) {
+	html {
+		font-size: 93.75%;
+	}
+}
+@media (max-width: 720px) {
+	html {
+		font-size: 87.5%;
+	}
+}
+
+body {
+	height: 100%;
+	background: var(--background);
+	-webkit-font-smoothing: antialiased;
+}
+body,
+input,
+textarea,
+button {
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+	font-weight: 600;
+}
+button {
+	cursor: pointer;
+}
+[disabled] {
+	opacity: 0.6;
+	cursor: not-allowed;
+}
