fix: correct green-light var

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,6 @@
-<header class="header">Teste header</header>
+<header class="header">
+	<p class="logo">dev.finance$</p>
+	<div class="btn-container">
+		<button class="new-transaction-btn" type="button">Nova transação</button>
+	</div>
+</header>
