--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,7 @@
 :root {
 	--green: #2d4a22;
 	--red: #e52e4d;
-	--blue: #5429cc;
-	--blue-light: #49aa26;
+	--green-light: #49aa26;
 	--text-title: #363f5f;
 	--text-body: #969cb3;
 	--input-background: #e7e9ee;
