--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,17 +19,6 @@
 	width: 100%;
 	height: 100%;
 }
-@media (max-width: 1080px) {
-	html {
-		font-size: 93.75%;
-	}
-}
-@media (max-width: 720px) {
-	html {
-		font-size: 87.5%;
-	}
-}
-
 body {
 	height: 100%;
 	background: var(--background);
@@ -57,4 +46,18 @@ button {
 [disabled] {
 	opacity: 0.6;
 	cursor: not-allowed;
+}
+img {
+	display: block;
+	max-width: 100%;
+}
+@media (max-width: 1080px) {
+	html {
+		font-size: 93.75%;
+	}
+}
+@media (max-width: 720px) {
+	html {
+		font-size: 80%;
+	}
 }
