--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
-	<p class="logo">dev.finance$</p>
-	<div class="btn-container">
+	<img src="../../../assets/logo.svg" class="logo" />
+	<div class="transaction-btn-container">
 		<button class="new-transaction-btn" type="button">Nova transação</button>
 	</div>
 </header>
