--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,25 +1,29 @@
 .header {
+	width: 100%;
+	top: 0;
 	height: 15rem;
-	width: 100vw;
-	display: flex;
 	background: var(--green);
-	color: var(--shape);
+	display: flex;
+	justify-content: space-between;
 
 	.logo {
-		padding: 2rem 0 0 8rem;
-		font-size: 2rem;
+		width: 7.5rem;
+		height: 1.5rem;
+		margin: 5rem;
+		display: block;
 	}
 
-	.btn-container {
-		padding: 2rem 80rem;
-		flex-direction: end;
-
+	.transaction-btn-container {
+		width: 3rem;
+		height: 1.5rem;
+		width: 12rem;
+		height: 3rem;
+		margin: 4rem;
 		.new-transaction-btn {
+			display: inline-block;
 			color: var(--shape);
 			font-weight: bold;
 			font-size: 1rem;
-			width: 12rem;
-			height: 3rem;
 			border: none;
 			background: var(--green-light);
 			border-radius: 0.25rem;
