--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,1 @@
-<div class="dashboard-container"><p>Teste dashboard</p></div>
+<div class="dashboard-container"><app-money-card></app-money-card></div>
