fix: add alt at logo img

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,9 @@
 <header class="header">
-	<img src="../../../assets/logo.svg" class="logo" />
+	<img
+		src="../../../assets/logo.svg"
+		class="logo"
+		alt="dev.finances logo in white and green"
+	/>
 	<div class="transaction-btn-container">
 		<button class="new-transaction-btn" type="button">Nova transação</button>
 	</div>
