--- a/src/app/components/shared/money-card/money-card.component.scss
+++ b/src/app/components/shared/money-card/money-card.component.scss
@@ -2,15 +2,45 @@
 	display: flex;
 	justify-content: center;
 	height: 10rem;
+	padding: 1.5rem 2rem;
 
-	.card-content {
+	.card {
 		width: 22rem;
+		position: space-between;
+		margin: 0 2rem;
 		height: 8.5rem;
 		border-radius: 0.25rem;
-	}
+		background: var(--shape);
+		border-radius: 0.25rem;
 
-	h2 {
-		font-size: 1rem;
-		font-weight: 400;
+		.white-bg {
+			background: var(--shape);
+		}
+
+		.green-bg {
+			background: var(--green-light);
+		}
+
+		.title-icon {
+			height: 3rem;
+			display: flex;
+
+			.card-title {
+				font-size: 1.5rem;
+				margin: 1.5rem 0 0 1.5rem;
+				font-weight: 400;
+				color: var(--text-body);
+			}
+
+			.icon {
+				width: 3rem;
+				height: 3rem;
+				margin: 1.2rem 1.5rem 1rem 0;
+			}
+
+			.card-value {
+				display: block;
+			}
+		}
 	}
 }
