--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,29 +4,12 @@
 	height: 15rem;
 	background: var(--green);
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 
 	.logo {
 		width: 7.5rem;
 		height: 1.5rem;
 		margin: 5rem;
 		display: block;
-	}
-
-	.transaction-btn-container {
-		width: 3rem;
-		height: 1.5rem;
-		width: 12rem;
-		height: 3rem;
-		margin: 4rem;
-		.new-transaction-btn {
-			display: inline-block;
-			color: var(--shape);
-			font-weight: bold;
-			font-size: 1rem;
-			border: none;
-			background: var(--green-light);
-			border-radius: 0.25rem;
-		}
 	}
 }
