--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 	--green: #2d4a22;
 	--red: #e52e4d;
 	--green-light: #49aa26;
-	--text-title: #363f5f;
+	--text-description: #363f5f;
 	--text-body: #969cb3;
 	--input-background: #e7e9ee;
 	--input-border: #d7d7d7;
