feat: display total cards amount

--- a/src/app/components/shared/money-card/money-card.component.html
+++ b/src/app/components/shared/money-card/money-card.component.html
@@ -7,9 +7,7 @@
 					<img [src]="card.src" [alt]="card.alt" />
 				</i>
 			</div>
-			<div class="card-value">
-				<p>{{ card.amount }}</p>
-			</div>
+			<p class="card-amount">{{ card.amount }}</p>
 		</div>
 	</div>
 </section>
