--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
 <main>
-	<div class="dashboard-container"><app-money-card></app-money-card></div>
+	<div class="dashboard-container">
+		<app-money-card></app-money-card>
+		<app-transactions-table></app-transactions-table>
+	</div>
 </main>
