--- a/src/app/components/transactions-table/transactions-table.component.html
+++ b/src/app/components/transactions-table/transactions-table.component.html
@@ -1,4 +1,6 @@
-<button class="new-transaction-btn"><a href="#">+ Nova transação</a></button>
+<button class="new-transaction-btn" (click)="openModal()">
+	<a href="#">+ Nova transação</a>
+</button>
 
 <table class="container-transactions">
 	<tr class="title-transactions">
@@ -8,8 +10,8 @@
 	</tr>
 	<tr class="transactions-infos" *ngFor="let transactionInfo of transactionInfos">
 		<td class="info description-row">{{ transactionInfo.description }}</td>
-		<td class="info value-row">{{ transactionInfo.value }}</td>
-		<td class="info date-row">{{ transactionInfo.date }}</td>
+		<td class="info value-row">{{ transactionInfo.value | currency }}</td>
+		<td class="info date-row">{{ transactionInfo.date | date: "short" }}</td>
 		<td class="info delete-row">
 			<a href="#"><img [src]="transactionInfo.delete" alt="minus button" /></a>
 		</td>
