--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,35 +1,32 @@
 <ng-template #modal>
-	<div class="modal-header">
-		<h5 class="modal-title">{{ modalConfig.modalTitle }}</h5>
-	</div>
-	<div class="modal-body">
-		<ng-content></ng-content>
-	</div>
-	<div class="modal-footer">
-		<button
-			type="button"
-			class="btn btn-outline-secondary"
-			(click)="dismissModal()"
-			*ngIf="
-				modalConfig.hideDismissButton === undefined || !modalConfig.hideDismissButton()
-			"
-			[disabled]="
-				modalConfig.disableDismissButton !== undefined &&
-				modalConfig.disableDismissButton()
-			"
-		>
-			{{ modalConfig.dismissButtonLabel }}
-		</button>
-		<button
-			type="button"
-			class="btn btn-outline-primary"
-			(click)="closeModal()"
-			*ngIf="modalConfig.hideCloseButton === undefined || !modalConfig.hideCloseButton()"
-			[disabled]="
-				modalConfig.disableCloseButton !== undefined && modalConfig.disableCloseButton()
-			"
-		>
-			{{ modalConfig.closeButtonLabel }}
-		</button>
+	<div class="modal-container">
+		<div class="modal-header">
+			<h5 class="modal-title">Nova transação</h5>
+		</div>
+		<div class="modal-body">
+			<div class="inputs">
+				<input
+					type="text"
+					class="input description"
+					name="input description"
+					id="description"
+					placeholder="Descrição"
+				/>
+				<input
+					type="number"
+					class="input amount"
+					name="=amount"
+					id="amount"
+					placeholder="R$ 0,00"
+				/>
+			</div>
+			<p></p>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-cancel" (click)="dismissModal()">
+				Cancelar
+			</button>
+			<button type="button" class="btn btn-save" (click)="closeModal()">Salvar</button>
+		</div>
 	</div>
 </ng-template>
