fix: transactions elements position

--- a/src/app/components/transactions-table/transactions-table.component.scss
+++ b/src/app/components/transactions-table/transactions-table.component.scss
@@ -24,11 +24,12 @@
 
 .container-transactions {
 	display: flex;
+	position: absolute;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 73.5rem;
-	margin: -19rem auto;
+	margin: -27rem 14rem;
 
 	.title-transactions,
 	.transactions-infos {
