fix: button background color

--- a/src/app/components/transactions-table/transactions-table.component.html
+++ b/src/app/components/transactions-table/transactions-table.component.html
@@ -18,4 +18,4 @@
 	</tr>
 </table>
 
-<app-modal #modal [modalConfig]="modalConfig"></app-modal>
+<app-modal class="modal" #modal [modalConfig]="modalConfig"></app-modal>
