--- a/src/app/components/transactions-table/transactions-table.component.scss
+++ b/src/app/components/transactions-table/transactions-table.component.scss
@@ -9,6 +9,7 @@
 	position: relative;
 	margin: 3.5rem auto;
 	padding: 0.5rem;
+	background: var(--background);
 
 	a {
 		text-decoration: none;
@@ -64,5 +65,10 @@
 		width: 3.5rem;
 		height: 3.5rem;
 		margin-left: 23rem;
+	}
+
+	.modal {
+		background: transparent;
+		opacity: 1;
 	}
 }
