--- a/src/app/components/transactions-table/transactions-table.component.scss
+++ b/src/app/components/transactions-table/transactions-table.component.scss
@@ -25,12 +25,19 @@
 
 .container-transactions {
 	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: -25rem auto;
+}
+
+.transactions {
+	display: flex;
 	position: absolute;
+	height: 30px;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 73.5rem;
-	margin: -27rem 14rem;
 
 	.title-transactions,
 	.transactions-infos {
@@ -41,6 +48,9 @@
 		text-align: left;
 		border-radius: 0.25rem;
 		margin-bottom: 0.8rem;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
 
 	.title-transactions {
