fix: add new transaction button position

--- a/src/app/components/transactions-table/transactions-table.component.scss
+++ b/src/app/components/transactions-table/transactions-table.component.scss
@@ -1,13 +1,13 @@
 .new-transaction-btn {
 	border: none;
 	background: transpar;
-	width: 10rem;
+	width: 14rem;
 	height: 3rem;
 	justify-content: center;
 	display: flex;
 	align-items: center;
 	position: relative;
-	margin: 3.5rem auto;
+	margin: 3.5rem 2rem auto;
 	padding: 0.5rem;
 	background: var(--background);
 
