--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,9 @@
 	--green-light: #49aa26;
 	--text-description: #363f5f;
 	--text-body: #969cb3;
-	--modal-background: #e7e9ee;
-	--input-border: #d7d7d7;
+	--modal-background: #d7d7d7;
 	--background: #f0f2f5;
+	--modal-background: #2d4a22d5;
 	--shape: #ffffff;
 }
 
@@ -59,6 +59,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
 	-moz-appearance: textfield;
 }
+
 @media (max-width: 1080px) {
 	html {
 		font-size: 93.75%;
