--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,32 +1,34 @@
 <ng-template #modal>
-	<div class="modal-container">
-		<div class="modal-header">
-			<h5 class="modal-title">Nova transação</h5>
-		</div>
-		<div class="modal-body">
-			<div class="inputs">
-				<input
-					type="text"
-					class="input description"
-					name="input description"
-					id="description"
-					placeholder="Descrição"
-				/>
-				<input
-					type="number"
-					class="input amount"
-					name="=amount"
-					id="amount"
-					placeholder="R$ 0,00"
-				/>
+	<div class="modal-background">
+		<div class="modal-container">
+			<div class="modal-header">
+				<h5 class="modal-title">Nova transação</h5>
 			</div>
-			<p></p>
-		</div>
-		<div class="modal-footer">
-			<button type="button" class="btn btn-cancel" (click)="dismissModal()">
-				Cancelar
-			</button>
-			<button type="button" class="btn btn-save" (click)="closeModal()">Salvar</button>
+			<div class="modal-body">
+				<div class="inputs">
+					<input
+						type="text"
+						class="input description"
+						name="input description"
+						id="description"
+						placeholder="Descrição"
+					/>
+					<input
+						type="number"
+						class="input amount"
+						name="=amount"
+						id="amount"
+						placeholder="R$ 0,00"
+					/>
+				</div>
+				<p></p>
+			</div>
+			<div class="btn-container">
+				<button type="button" class="btn btn-cancel" (click)="dismissModal()">
+					Cancelar
+				</button>
+				<button type="button" class="btn btn-save" (click)="closeModal()">Salvar</button>
+			</div>
 		</div>
 	</div>
 </ng-template>
