chore: add hover variables

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,14 @@
 :root {
 	--green: #2d4a22;
 	--red: #e52e4d;
+	--red-hover: #e52e4dbe;
 	--green-light: #49aa26;
+	--green-light-hover: #49aa26a8;
 	--text-description: #363f5f;
 	--text-body: #969cb3;
 	--modal-background: #d7d7d7;
 	--background: #f0f2f5;
-	--modal-background: #2d4a22d5;
+	--modal-background: #2d4a22c9;
 	--shape: #ffffff;
 }
 
