fix: modal position at screen

--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -1,12 +1,12 @@
 .modal-container {
 	display: flex;
 	flex-direction: column;
-	margin: 0 auto;
+	margin: 20rem auto;
 	width: 38rem;
 	height: 25rem;
 	background: var(--modal-background);
 	margin-top: -50rem;
-	top: -5.5em;
+	top: -4em;
 	position: relative;
 	padding: 2.5rem;
 	border-radius: 0.4rem;
