--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -5,7 +5,7 @@
 	width: 38rem;
 	height: 25rem;
 	background: var(--modal-background);
-	margin-top: -50rem;
+	margin-top: -53rem;
 	top: -4em;
 	position: relative;
 	padding: 2.5rem;
@@ -14,10 +14,14 @@
 
 .modal-header {
 	display: block;
+	height: 6rem;
 	font-size: 2.5rem;
 	color: var(--shape);
 }
 
+.form {
+	height: 8rem;
+}
 .input {
 	height: 2.5rem;
 	margin-bottom: 0.8rem;
